add animate section about

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
+import About from '../components/About.astro';
+import FirstSetion from '../components/FirstSetion.astro';
+import Footer from '../components/Footer.astro';
+import Form from '../components/Form.astro';
+import Header from '../components/Header.astro';
+import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
-import About from '../sections/About.astro';
-import FirstSetion from '../sections/FirstSetion.astro';
-import Header from '../sections/Header.astro';
 ---
 
 <Layout title='landing-page-hydra-project'>
@@ -10,5 +13,20 @@ import Header from '../sections/Header.astro';
   <main class='flex justify-center items-center flex-col w-full'>
     <FirstSetion />
     <About />
+    <Services />
+    <Form />
   </main>
+  <Footer />
 </Layout>
+<style is:global>
+  #about-item {
+    animation: viewComponent linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 35%;
+  }
+  @media (prefers-reduced-motion: reduce) {
+    #about-item {
+      animation: none;
+    }
+  }
+</style>
