--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,10 @@
   id='about'
   class='flex justify-center items-center flex-col my-14 w-full md:w-[95%] md:relative'
 >
-  <article class='flex justify-center items-center flex-col md:flex-row w-full'>
+  <article
+    id='about-item'
+    class='flex justify-center items-center flex-col md:flex-row w-full'
+  >
     <div class='md:flex md:flex-col md:justify-start md:items-start md:w-[43%]'>
       <h2 class='text-customtext font-bold text-base leading-8'>
         INTRODUCTION
@@ -29,6 +32,7 @@
     </p>
   </article>
   <article
+    id='about-item'
     class='flex justify-center items-center flex-col md:flex-row w-[90%] md:w-[90%] mt-7'
   >
     <div class='z-10 md:w-1/2'>
