--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <link
       rel='icon'
       type='image/svg+xml'
-      href='/favicon.svg'
+      href='/public/mobile/Frame-footer.svg'
     />
     <meta
       name='generator'
@@ -39,7 +39,22 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     font-family: 'Montserrat Variable', sans-serif;
+  }
+  @keyframes viewComponent {
+    from {
+      opacity: 0;
+      translate: 100% 0;
+      scale: 0.6;
+    }
+    to {
+      opacity: 1;
+      translate: 0 0;
+      scale: 1;
+    }
   }
 </style>
