--- a/src/components/FirstSetion.astro
+++ b/src/components/FirstSetion.astro
@@ -7,21 +7,16 @@
     <div
       class='z-30 flex justify-center items-center md:gap-5 flex-col mt-10 md:pr-[12%] md:items-start md:w-[50%]'
     >
-      <div class='z-50'>
-        <h2
-          class='text-3xl font-bold bg-gradient-to-r from-primary from-100% via-secundary via-100% to-white to-0% text-transparent bg-clip-text'
-        >
-          Dive
-          <span class='text-customtext text-2xl'>Into The Depths</span>
-        </h2>
-        <h2
-          class='text-3xl font-bold bg-gradient-to-r from-primary from-100% via-secundary via-100% to-white to-0% text-transparent bg-clip-text'
-        >
-          <span class='text-customtext text-2xl font-bold'>of</span>
-          Virtual Reality
-        </h2>
-      </div>
-      <p class='hidden md:flex text-customtext'>
+      <h1
+        class='z-50 text-3xl text-balance text-center md:text-left font-bold bg-gradient-to-r from-primary from-100% via-secundary via-100% to-white to-0% text-transparent bg-clip-text'
+      >
+        Dive
+        <span class='text-customtext text-2xl'>Into The Depths</span>
+
+        <span class='text-customtext text-2xl font-bold'>of</span>
+        Virtual Reality
+      </h1>
+      <p class='hidden md:flex text-customtext text-pretty'>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore nisl tincidunt eget. Lectus mauris
         eros in vitae .
