--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,39 +3,43 @@
 >
   <article>
     <img
-      class='hidden md:block absolute bottom-[14%] left-0 animate-pulse'
+      class='hidden md:block absolute bottom-[7.4%] left-0 animate-pulse'
       src='/public/desktop/Vector 19.svg'
       alt='Vector 19 desktop'
     />
     <img
-      class='hidden md:block absolute bottom-[7.8%] left-0 animate-pulse'
+      class='hidden md:block absolute bottom-[4.3%] left-0 animate-pulse'
       src='public/desktop/Vector 18.svg'
       alt='Vector 18 desktop'
     />
   </article>
   <article
-    class='flex justify-center md:justify-between md:items-center flex-col md:flex-row w-[90%] z-10'
+    class='flex justify-center md:justify-between items-center flex-col md:flex-row w-[90%] z-10'
   >
     <img
       class='w-[150px]'
       src='/public/mobile/Frame-footer.svg'
       alt='Frame-footer'
+      loading='lazy'
     />
     <img
       class='md:hidden absolute top-[-4%] left-0 animate-pulse'
       src='/public/mobile/Vector 19.svg '
       alt='Vector 19 mobile'
+      loading='lazy'
     />
     <img
       class='md:hidden absolute top-[22%] left-0 animate-pulse'
       src='/public/mobile/Vector 18.svg'
       alt='Vector 18 mobile'
+      loading='lazy'
     />
 
     <img
       class='hidden md:block'
       src='/public/desktop/Vector 20.svg'
       alt='vector 20'
+      loading='lazy'
     />
     <ul class='hidden md:flex md:flex-col gap-y-3'>
       <li>ABOUT</li>
@@ -48,6 +52,7 @@
       class='hidden md:block'
       src='/public/desktop/Vector 20.svg'
       alt='vector 20'
+      loading='lazy'
     />
 
     <ul class='hidden md:flex md:flex-col gap-y-3'>
@@ -60,6 +65,7 @@
       class='hidden md:block'
       src='/public/desktop/Vector 20.svg'
       alt='vector 20'
+      loading='lazy'
     />
     <div
       class='flex flex-col justify-center items-center md:items-start gap-y-8'
