--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@
   class='flex justify-center items-center flex-col my-14 w-full md:w-[95%] md:relative'
 >
   <article
-    id='about-item'
+    id='about-item--one'
     class='flex justify-center items-center flex-col md:flex-row w-full'
   >
     <div class='md:flex md:flex-col md:justify-start md:items-start md:w-[43%]'>
@@ -32,7 +32,7 @@
     </p>
   </article>
   <article
-    id='about-item'
+    id='about-item--two'
     class='flex justify-center items-center flex-col md:flex-row w-[90%] md:w-[90%] mt-7'
   >
     <div class='z-10 md:w-1/2'>
