--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -11,49 +11,43 @@
       <p class='font-light text-2xl text-customtext'>Your VR Experience</p>
     </div>
     <form class='flex justify-center items-center flex-col gap-4 h-auto w-full'>
-      <div
-        class='flex justify-center items-center flex-col gap-4 md:flex-row w-full md:w-[98%] pl-8 md:pl-6 box-border'
-      >
-        <div class='flex flex-col gap-4 w-full md:w-1/2 box-border'>
-          <input
-            class='bg-transparent border-2 border-white rounded-full block w-[90%] p-3 text-customtext'
-            type='text'
-            name=''
-            id=''
-            placeholder='First Name'
-          />
-          <input
-            class='bg-transparent border-2 border-white rounded-full block w-[90%] p-3 text-customtext'
-            type='text'
-            name=''
-            id=''
-            placeholder='Last Name'
-          />
-        </div>
-        <div class='flex flex-col gap-4 w-full md:w-1/2'>
-          <input
-            class='bg-transparent border-2 border-white rounded-full block w-[90%] p-3 text-customtext'
-            type='email'
-            name=''
-            id=''
-            placeholder='Email'
-          />
-          <input
-            class='bg-transparent border-2 border-white rounded-full block w-[90%] p-3 text-customtext'
-            type='number'
-            name=''
-            id=''
-            placeholder='Phone Number'
-          />
-        </div>
+      <div class='flex flex-wrap justify-between items-center gap-5 w-4/5'>
+        <input
+          class='bg-transparent border-2 border-white rounded-full block w-4/5 md:w-[48.5%] p-3 text-customtext'
+          type='text'
+          name=''
+          id=''
+          placeholder='First Name'
+        />
+        <input
+          class='bg-transparent border-2 border-white rounded-full block w-4/5 md:w-[48.5%] p-3 text-customtext'
+          type='text'
+          name=''
+          id=''
+          placeholder='Last Name'
+        />
+        <input
+          class='bg-transparent border-2 border-white rounded-full block w-4/5 md:w-[48.5%] p-3 text-customtext'
+          type='email'
+          name=''
+          id=''
+          placeholder='Email'
+        />
+        <input
+          class='bg-transparent border-2 border-white rounded-full block w-4/5 md:w-[48.5%] p-3 text-customtext'
+          type='number'
+          name=''
+          id=''
+          placeholder='Phone Number'
+        />
       </div>
       <input
-        class='bg-transparent border-2 border-white rounded-full block w-[90%] p-3 text-customtext md:w-[90%]'
+        class='bg-transparent border-2 border-white rounded-full block w-4/5 p-3 text-customtext'
         type='text'
         placeholder='Subject'
       />
       <textarea
-        class='bg-transparent border-2 border-white rounded-2xl w-[83%] md:w-[90%] p-3'
+        class='bg-transparent border-2 border-white rounded-2xl w-[83%] md:w-4/5 p-3'
         name=''
         id=''
         cols='30'
