--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,13 +48,30 @@ const { title } = Astro.props;
   @keyframes viewComponent {
     from {
       opacity: 0;
-      translate: 100% 0;
+
       scale: 0.6;
     }
     to {
       opacity: 1;
-      translate: 0 0;
+
       scale: 1;
+    }
+  }
+
+  #about-item--one {
+    animation: viewComponent linear both;
+    animation-timeline: view();
+    animation-range: entry 20% cover 40%;
+  }
+  #about-item--two {
+    animation: viewComponent linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 35%;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    #about-item--one {
+      animation: none;
     }
   }
 </style>
