--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,145 +16,144 @@ import Youtube from '../images/mobile/youtube.svg';
 ---
 
 <footer
-  class='flex items-center flex-col mt-16 w-full text-customtext overflow-hidden'
->
-  <article>
-    <img
-      class='hidden md:block absolute bottom-[7.4%] left-0 animate-pulse'
-      src={Vector19.src}
-      alt='Vector 19 desktop'
-    />
-    <img
-      class='hidden md:block absolute bottom-[4.3%] left-0 animate-pulse'
-      src={Vector18.src}
-      alt='Vector 18 desktop'
-    />
-  </article>
-  <article
-    class='flex justify-center md:justify-between items-center flex-col md:flex-row w-[90%] z-10'
-  >
-    <img
-      class='w-[150px]'
-      src={FrameFooter.src}
-      alt='Frame-footer'
-      loading='lazy'
-    />
-    <img
-      class='md:hidden absolute top-[-4%] left-0 animate-pulse'
-      src={Vector19Mobile.src}
-      alt='Vector 19 mobile'
-      loading='lazy'
-    />
-    <img
-      class='md:hidden absolute top-[22%] left-0 animate-pulse'
-      src='/public/mobile/Vector 18.svg'
-      alt={Vector18Mobile.src}
-      loading='lazy'
-    />
-    <img
-      class='hidden md:block'
-      src={Vector20.src}
-      alt='vector 20'
-      loading='lazy'
-    />
-    <ul class='hidden md:flex md:flex-col gap-y-3'>
-      <li><a href=''>ABOUT</a></li>
-      <li><a href=''>SERVICES</a></li>
-      <li><a href=''>TECHNOLOGIES</a></li>
-      <li><a href=''>HOW TO</a></li>
-      <li><a href=''>JOIN HIDRA</a></li>
-    </ul>
-    <img
-      class='hidden md:block'
-      src={Vector20.src}
-      alt='vector 20'
-      loading='lazy'
-    />
-    <ul class='hidden md:flex md:flex-col gap-y-3'>
-      <li><a href=''>F.A.Q</a></li>
-      <li><a href=''>SITEMAP</a></li>
-      <li><a href=''>CONDITIONS</a></li>
-      <li><a href=''>LICENSES</a></li>
-    </ul>
-    <img
-      class='hidden md:block'
-      src={Vector20.src}
-      alt='vector 20'
-      loading='lazy'
-    />
-    <div
-      class='flex flex-col justify-center items-center md:items-start gap-y-8'
-    >
-      <h2 class='font-bold text-base'>SOCIALIZE WITH HYDRA</h2>
-      <ul class='flex justify-center items-center gap-5'>
-        <li>
-          <img
-            src={Facebook.src}
-            alt=''
-          />
-        </li>
-        <li>
-          <img
-            src={Twitter.src}
-            alt=''
-          />
-        </li>
-        <li>
-          <img
-            src={Linkedin.src}
-            alt=''
-          />
-        </li>
-        <li>
-          <img
-            src={Youtube.src}
-            alt=''
-          />
-        </li>
-        <li>
-          <img
-            src={Instagram.src}
-            alt=''
-          />
-        </li>
-        <li>
-          <img
-            src={Pinterest.src}
-            alt=''
-          />
-        </li>
-      </ul>
-      <a
-        class='[background:linear-gradient(90deg,_#8176AF_0%,_#C0B7E8_100%)] py-3 px-12 block rounded-full hover:animate-pulse-two text-sm font-bold text-center text-customtextDark'
-        href=''
-        >BUILD YOUR WORLD</a
-      >
-    </div>
-  </article>
-  <article
-    class='flex justify-center items-center flex-col mt-8 w-[90%] md:w-[86%]'
-  >
-    <picture class='flex justify-center items-center w-[86%] my-10'>
-      <source
-        media='(min-width: 768px)'
-        srcset={Vector17.src}
-      />
+	class='flex items-center flex-col mt-16 w-full text-customtext overflow-hidden'>
+	<article>
+		<img
+			class='hidden md:block absolute bottom-[7.4%] left-0 animate-pulse'
+			src={Vector19.src}
+			alt='Vector 19 desktop'
+		/>
+		<img
+			class='hidden md:block absolute bottom-[4.3%] left-0 animate-pulse'
+			src={Vector18.src}
+			alt='Vector 18 desktop'
+		/>
+	</article>
+	<article
+		class='flex justify-center md:justify-between items-center flex-col md:flex-row w-[90%] z-10'>
+		<img
+			class='w-[150px]'
+			src={FrameFooter.src}
+			alt='Frame-footer'
+			loading='lazy'
+		/>
+		<img
+			class='md:hidden absolute top-[-4%] left-0 animate-pulse'
+			src={Vector19Mobile.src}
+			alt='Vector 19 mobile'
+			loading='lazy'
+		/>
+		<img
+			class='md:hidden absolute top-[22%] left-0 animate-pulse'
+			src={Vector18Mobile.src}
+			alt='Vector 18 mobile'
+			loading='lazy'
+		/>
+		<img
+			class='hidden md:block'
+			src={Vector20.src}
+			alt='vector 20'
+			loading='lazy'
+		/>
+		<ul class='hidden md:flex md:flex-col gap-y-3'>
+			<li><a href=''>ABOUT</a></li>
+			<li><a href=''>SERVICES</a></li>
+			<li><a href=''>TECHNOLOGIES</a></li>
+			<li><a href=''>HOW TO</a></li>
+			<li><a href=''>JOIN HIDRA</a></li>
+		</ul>
+		<img
+			class='hidden md:block'
+			src={Vector20.src}
+			alt='vector 20'
+			loading='lazy'
+		/>
+		<ul class='hidden md:flex md:flex-col gap-y-3'>
+			<li><a href=''>F.A.Q</a></li>
+			<li><a href=''>SITEMAP</a></li>
+			<li><a href=''>CONDITIONS</a></li>
+			<li><a href=''>LICENSES</a></li>
+		</ul>
+		<img
+			class='hidden md:block'
+			src={Vector20.src}
+			alt='vector 20'
+			loading='lazy'
+		/>
+		<div
+			class='flex flex-col justify-center items-center md:items-start gap-y-8'>
+			<h2 class='font-bold text-base'>SOCIALIZE WITH HYDRA</h2>
+			<ul class='flex justify-center items-center gap-5'>
+				<li>
+					<img
+						src={Facebook.src}
+						alt=''
+					/>
+				</li>
+				<li>
+					<img
+						src={Twitter.src}
+						alt=''
+					/>
+				</li>
+				<li>
+					<img
+						src={Linkedin.src}
+						alt=''
+					/>
+				</li>
+				<li>
+					<img
+						src={Youtube.src}
+						alt=''
+					/>
+				</li>
+				<li>
+					<img
+						src={Instagram.src}
+						alt=''
+					/>
+				</li>
+				<li>
+					<img
+						src={Pinterest.src}
+						alt=''
+					/>
+				</li>
+			</ul>
+			<a
+				class='[background:linear-gradient(90deg,_#8176AF_0%,_#C0B7E8_100%)] py-3 px-12 block rounded-full hover:animate-pulse-two text-sm font-bold text-center text-customtextDark'
+				href=''
+				>BUILD YOUR WORLD</a
+			>
+		</div>
+	</article>
+	<article
+		class='flex justify-center items-center flex-col mt-8 w-[90%] md:w-[86%]'>
+		<picture class='flex justify-center items-center w-[86%] my-10'>
+			<source
+				media='(min-width: 768px)'
+				srcset={Vector17.src}
+			/>
 
-      <img
-        src={Vector25.src}
-        alt='vector'
-      />
-    </picture>
-    <ul
-      class='flex justify-center items-center flex-col md:flex-row gap-4 md:gap-2'
-    >
-      <li class='font-bold text-sm tracking-[1.82px]'>
-        2023 © HYDRA LANDING PAGE
-      </li>
-      <li class='hidden md:flex'>-</li>
-      <li class='font-bold text-sm tracking-[1.82px]'>BY ZINE. E. FALOUTI</li>
-      <li class='hidden md:flex'>-</li>
-      <li class='font-bold text-sm tracking-[1.82px]'>ALL RIGHTS RESERVED</li>
-    </ul>
-  </article>
+			<img
+				src={Vector25.src}
+				alt='vector'
+			/>
+		</picture>
+		<ul
+			class='flex justify-center items-center flex-col md:flex-row gap-4 md:gap-2'>
+			<li class='font-bold text-sm text-center tracking-[1.82px]'>
+				2023 © HYDRA LANDING PAGE
+			</li>
+			<li class='hidden md:flex'>-</li>
+			<li class='font-bold text-sm tracking-[1.82px]'>
+                BY ZINE. E. FALOUTI
+            </li>
+			<li class='hidden md:flex'>-</li>
+			<li class='font-bold text-sm tracking-[1.82px]'>
+                ALL RIGHTS RESERVED
+            </li>
+		</ul>
+	</article>
 </footer>
