--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -3,106 +3,74 @@ import Component1 from '../images/desktop/Component 1.svg';
 import PexelsMali from '../images/desktop/pexels-mali-maeder-756439 1.svg';
 import PexelsMikhail from '../images/desktop/pexels-mikhail-nilov-7887140 1.svg';
 import PexelsRodnae from '../images/desktop/pexels-rodnae-productions-8098263 1.svg';
-import SmallLeft from '../images/mobile/chevron-small-down-left.svg';
-import SmallRight from '../images/mobile/chevron-small-down-right.svg';
 import PexelsProduction from '../images/mobile/pexels-shvets-production-7561969 1.png';
 import Card from './subcomponent/Card.astro';
 ---
 
 <section
-  id='services'
-  class='flex justify-center items-center flex-col my-14 w-full md:w-[86%]'
->
-  <article
-    class='flex justify-center items-center flex-col md:flex-row w-[90%] md:w-[86%]'
-  >
-    <div class='md:flex md:flex-col md:justify-start md:items-start md:w-[48%]'>
-      <h2 class='text-customtext font-bold text-base leading-8'>WHY BUILD</h2>
-      <div class='md:flex md:items-center md:justify-center md:gap-5'>
-        <h2
-          class='text-base md:text-nowrap text-customtext font-light leading-8'
-        >
-          WITH HYDRA?
-        </h2>
-        <img
-          class='hidden md:block h-[60px]'
-          src={Component1.src}
-          alt='Component 1'
-        />
-      </div>
-    </div>
-    <p class='hidden md:flex md:w-[52%] text-customtext font-normal text-base'>
-      Vitae sapien pellentesque habitant morbi tristique senectus et netus et.
-      Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit amet
-      mauris commodo quis imperdiet massa tincidunt nunc. Viverra aliquet eget
-      sit amet tellus. Ornare lectus sit amet est placerat in. Lectus magna
-      fringilla urna porttitor rhoncus vitae.
-    </p>
-  </article>
-  <article
-    class='flex justify-center items-center gap-5 md:w-[86%] h-auto md:mt-5 relative'
-  >
-    <Card
-      title='SIMULATION'
-      body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'
-    >
-      <img
-        class='rounded-full'
-        src={PexelsProduction.src}
-        alt='PexelsProduction'
-      />
-    </Card>
-    <Card
-      title='EDUCATION'
-      body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'
-    >
-      <img
-        class='rounded-full'
-        src={PexelsMikhail.src}
-        alt='PexelsMikhail'
-      />
-    </Card>
-    <Card
-      title='SELF-CARE'
-      body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'
-    >
-      <img
-        class='rounded-full'
-        src={PexelsRodnae.src}
-        alt='PexelsRodnae'
-      />
-    </Card>
-    <Card
-      title='OUTDOOR'
-      body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'
-    >
-      <img
-        class='rounded-full'
-        src={PexelsMali.src}
-        alt='PexelsMali'
-      />
-    </Card>
-    <div
-      class='md:hidden absolute z-40 flex top-0 left-0 w-full h-full px-[5%]'
-    >
-      <div class='my-auto w-full flex justify-between'>
-        <div class='bg-fondo p-1 rounded-full'>
-          <button class='btn-small rounded-full'>
-            <img
-              src={SmallLeft.src}
-              alt='circle-left'
-            />
-          </button>
-        </div>
-        <div class='bg-fondo p-1 rounded-full'>
-          <button class='btn-small rounded-full'>
-            <img
-              src={SmallRight.src}
-              alt='circle-right'
-            />
-          </button>
-        </div>
-      </div>
-    </div>
-  </article>
+	id='services'
+	class='flex justify-center items-center flex-col my-14 w-full md:w-[86%]'>
+	<article
+		class='flex justify-center items-center flex-col md:flex-row w-[90%] md:w-[86%]'>
+		<div class='md:flex md:flex-col md:justify-start md:items-start md:w-[48%]'>
+			<h2 class='text-customtext font-bold text-base leading-8'>WHY BUILD</h2>
+			<div class='md:flex md:items-center md:justify-center md:gap-5'>
+				<h2
+					class='text-base md:text-nowrap text-customtext font-light leading-8'>
+					WITH HYDRA?
+				</h2>
+				<img
+					class='hidden md:block h-[60px]'
+					src={Component1.src}
+					alt='Component 1'
+				/>
+			</div>
+		</div>
+		<p class='hidden md:flex md:w-[52%] text-customtext font-normal text-base'>
+			Vitae sapien pellentesque habitant morbi tristique senectus et netus et.
+			Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit amet
+			mauris commodo quis imperdiet massa tincidunt nunc. Viverra aliquet eget
+			sit amet tellus. Ornare lectus sit amet est placerat in. Lectus magna
+			fringilla urna porttitor rhoncus vitae.
+		</p>
+	</article>
+	<article
+		class='flex justify-center items-center gap-5 md:w-[86%] h-auto md:mt-5 relative'>
+		<Card
+			title='SIMULATION'
+			body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'>
+			<img
+				class='rounded-full'
+				src={PexelsProduction.src}
+				alt='PexelsProduction'
+			/>
+		</Card>
+		<Card
+			title='EDUCATION'
+			body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'>
+			<img
+				class='rounded-full'
+				src={PexelsMikhail.src}
+				alt='PexelsMikhail'
+			/>
+		</Card>
+		<Card
+			title='SELF-CARE'
+			body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'>
+			<img
+				class='rounded-full'
+				src={PexelsRodnae.src}
+				alt='PexelsRodnae'
+			/>
+		</Card>
+		<Card
+			title='OUTDOOR'
+			body='Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet porttitor rhoncus libero justo laoreet sit amet vitae.'>
+			<img
+				class='rounded-full'
+				src={PexelsMali.src}
+				alt='PexelsMali'
+			/>
+		</Card>
+	</article>
 </section>
