--- a/src/Setions/Header.astro
+++ b/src/Setions/Header.astro
@@ -4,7 +4,7 @@ import vector4 from '../images/desktop/Vector 4.svg';
 import Frame from '../images/mobile/Frame.svg';
 import HamburgerButton from '../images/mobile/Hamburger-Button.svg';
 import Vector from '../images/mobile/Vector.svg';
-import BtnPrimary from './subcomponent/BtnPrimary.astro';
+import BtnPrimary from '../components/Buttons/BtnPrimary.astro';
 ---
 
 <header class='w-full'>
