--- a/src/Setions/Services.astro
+++ b/src/Setions/Services.astro
@@ -4,7 +4,7 @@ import PexelsMali from '../images/desktop/pexels-mali-maeder-756439 1.svg';
 import PexelsMikhail from '../images/desktop/pexels-mikhail-nilov-7887140 1.svg';
 import PexelsRodnae from '../images/desktop/pexels-rodnae-productions-8098263 1.svg';
 import PexelsProduction from '../images/mobile/pexels-shvets-production-7561969 1.png';
-import Card from './subcomponent/Card.astro';
+import Card from '../components/Card.astro';
 ---
 
 <section
