--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-import BtnPrimary from './BtnPrimary.astro';
+import BtnPrimary from './Buttons/BtnPrimary.astro';
 
 interface Props {
   title: string;
