--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import About from '../components/About.astro';
-import FirstSetion from '../components/FirstSetion.astro';
-import Footer from '../components/Footer.astro';
+import About from '../Setions/About.astro';
+import FirstSetion from '../Setions/FirstSetion.astro';
+import Footer from '../Setions/Footer.astro';
 import Form from '../components/form/Form.astro';
-import Header from '../components/Header.astro';
-import HowTo from '../components/HowTo.astro';
-import Services from '../components/Services.astro';
-import Tecnologies from '../components/Tecnologies.astro';
+import Header from '../Setions/Header.astro';
+import HowTo from '../Setions/HowTo.astro';
+import Services from '../Setions/Services.astro';
+import Tecnologies from '../Setions/Tecnologies.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
