--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import About from '../Setions/About.astro';
 import FirstSetion from '../Setions/FirstSetion.astro';
 import Footer from '../Setions/Footer.astro';
 import Form from '../components/form/Form.astro';
-import Header from '../Setions/Header.astro';
+import Header from '../Setions/Header/Header.astro';
 import HowTo from '../Setions/HowTo.astro';
 import Services from '../Setions/Services.astro';
 import Tecnologies from '../Setions/Tecnologies.astro';
